src/test/deca/syntax/valid/parser/test_print.deca
// Utilisation booléenne du print

// Date: 20.01.2022

{
    boolean b = true;
    println(b);
}